--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cors": "^2.8.5",
+    "cors-anywhere": "^0.4.4",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.1.1",
