--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.2",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.1.1",
+    "multer": "^1.4.5-lts.1",
     "pako": "^2.1.0"
   },
   "devDependencies": {
