--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "express": "^4.21.2",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.1.1",
+    "juice": "^11.0.0",
+    "mjml": "^4.15.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "pako": "^2.1.0"
   },
   "devDependencies": {
