--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^1.7.9",
+    "busboy": "^1.6.0",
     "cors": "^2.8.5",
     "cors-anywhere": "^0.4.4",
     "dotenv": "^16.4.7",
