--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "22"
   },
   "main": "index.js",
   "dependencies": {
@@ -20,10 +20,12 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^12.1.0",
-    "firebase-functions": "^5.1.1",
+    "firebase-functions": "^6.3.2",
     "juice": "^11.0.0",
     "mjml": "^4.15.3",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "pako": "^2.1.0"
   },
