--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors-anywhere": "^0.4.4",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^6.3.2",
     "juice": "^11.0.0",
