--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "busboy": "^1.6.0",
+    "canvas": "^3.1.0",
     "cors": "^2.8.5",
     "cors-anywhere": "^0.4.4",
     "dotenv": "^16.4.7",
@@ -22,13 +23,16 @@
     "express-session": "^1.18.1",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^6.3.2",
+    "jspdf": "^3.0.0",
     "juice": "^11.0.0",
     "mjml": "^4.15.3",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
-    "pako": "^2.1.0"
+    "pako": "^2.1.0",
+    "path": "^0.12.7",
+    "pdf-lib": "^1.17.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
