--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "juice": "^11.0.0",
     "mjml": "^4.15.3",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "pako": "^2.1.0",
     "path": "^0.12.7",
-    "pdf-lib": "^1.17.1"
+    "pdf-lib": "^1.17.1",
+    "puppeteer": "^24.4.0",
+    "readline": "^1.3.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
