--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "ffmpeg": "^0.0.4",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^6.3.2",
+    "fluent-ffmpeg": "^2.1.3",
     "jspdf": "^3.0.0",
     "juice": "^11.0.0",
     "mjml": "^4.15.3",
