--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "cors-anywhere": "^0.4.4",
     "dotenv": "^16.4.7",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "ffmpeg": "^0.0.4",
@@ -27,7 +28,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "jspdf": "^3.0.0",
     "juice": "^11.0.0",
-    "mjml": "^4.15.3",
+    "mjml": "^4.7.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
     "multer": "^1.4.5-lts.1",
