--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "faker-br": "^0.4.1",
     "ffmpeg": "^0.0.4",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^6.3.2",
