--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "path": "^0.12.7",
     "pdf-lib": "^1.17.1",
     "readline": "^1.3.0",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
